--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
 	// Discord LogBack
-	implementation 'com.github.napstr:logback-discord-appender:1.0.0'
+	// implementation 'com.github.napstr:logback-discord-appender:1.0.0'
 
 	// Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
