--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,3 +106,15 @@ jobs:
             sudo fuser -k -n tcp 8080
             sleep 15
             sudo nohup java -jar /home/ubuntu/app/*.jar > ./nohup.out 2>&1 &
+
+      - name: Kill process on port 15001
+        run: |
+          if lsof -i:15001; then
+            lsof -ti:15001 | xargs kill -9
+          fi
+
+      - name: Run Flask app in background
+        run: |
+          cd Clean-Choice-openai
+          source .venv/bin/activate
+          nohup python3 openai-app.py > flask.log 2>&1 &
