--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,13 +108,23 @@ jobs:
             sudo nohup java -jar /home/ubuntu/app/*.jar > ./nohup.out 2>&1 &
 
       - name: Kill process on port 15001
-        run: |
-          if lsof -i:15001; then
-            lsof -ti:15001 | xargs kill -9
-          fi
+        uses: appleboy/ssh-action@master
+        with:
+          key: ${{ secrets.EC2_KEY_PROD }}
+          host: ${{ secrets.EC2_HOST_PROD }}
+          username: ${{ secrets.EC2_USER_PROD }}
+          script: |
+            if lsof -i:15001; then
+              lsof -ti:15001 | xargs kill -9
+            fi
 
       - name: Run Flask app in background
-        run: |
-          cd Clean-Choice-openai
-          source .venv/bin/activate
-          nohup python3 openai-app.py > flask.log 2>&1 &
+        uses: appleboy/ssh-action@master
+        with:
+          key: ${{ secrets.EC2_KEY_PROD }}
+          host: ${{ secrets.EC2_HOST_PROD }}
+          username: ${{ secrets.EC2_USER_PROD }}
+          script: |
+            cd Clean-Choice-openai
+            source .venv/bin/activate
+            nohup python3 openai-app.py > flask.log 2>&1 &
